WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48400
[Qt] WebKit2 UI process crashes if web process crashes
https://bugs.webkit.org/show_bug.cgi?id=48400
Summary
[Qt] WebKit2 UI process crashes if web process crashes
Kimmo Kinnunen
Reported
2010-10-26 23:40:21 PDT
UI process crashes if web process crashes. Reproduce: 1) Start MiniBrowser 2) Run killall QtWebProcess 3) Focus MiniBrowser 4) Crash Failing assertion: ASSERTION FAILED: bytesWritten == arguments->bufferSize() (../../../WebKit2/Platform/CoreIPC/qt/ConnectionQt.cpp:126 bool CoreIPC::Connection::sendOutgoingMessage(CoreIPC::MessageID, WTF::PassOwnPtr<CoreIPC::ArgumentEncoder>)) Segmentation fault
Attachments
Avoid crashing the UI if write to socket fails
(2.30 KB, patch)
2010-10-27 00:02 PDT
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2010-10-27 00:02:25 PDT
Created
attachment 71989
[details]
Avoid crashing the UI if write to socket fails
Andreas Kling
Comment 2
2010-10-27 03:10:42 PDT
Comment on
attachment 71989
[details]
Avoid crashing the UI if write to socket fails LGTM.
WebKit Commit Bot
Comment 3
2010-10-27 05:07:46 PDT
Comment on
attachment 71989
[details]
Avoid crashing the UI if write to socket fails Clearing flags on attachment: 71989 Committed
r70637
: <
http://trac.webkit.org/changeset/70637
>
WebKit Commit Bot
Comment 4
2010-10-27 05:07:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug